syntax = "proto3";

option csharp_namespace = "GrpcUserProfileServer";

import "google/protobuf/timestamp.proto";

service GrpcUserProfile {
  rpc GetShopperProfile (GrpcUserProfileRequest) returns (GrpcUserProfileResponse);
}


message GrpcUserProfileRequest {
  string email = 1;
}

message GrpcUserProfileResponse {
  GrpcUserDetails shopperDetails = 1;
}

message GrpcUserDetails {
  string email = 1;
  string firstName = 2;
  string lastName = 3;
  int32 dailyNumberOfCalories = 4;
  google.protobuf.Timestamp  createdAt = 5;
}